# AI-Vision

./: .gitignore  CMakeLists.txt  CONTEXT_SUMMARY.md  INTEGRATION_PROGRESS.md  NEXT_STEPS.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  README.md
.github/workflows/: ci.yml  jetson-ci.yml  release.yml
configs/: camera.yaml  model.yaml  pipeline.yaml
docker/: Dockerfile  docker-compose.yml  mosquitto.conf
scripts/: bench_tegrastats.sh  build_engines.sh  debug_tensorrt.sh  export_model.py  run_jetson_clocks.sh  web_interface.py
src/: capture_gst.cpp  events_mqtt.cpp  infer_trt.cpp  main.cpp  pipeline.cpp  record_gst.cpp  stub_mqtt.h  stub_yaml.h
systemd/: plowpilot-clocks.service  plowpilot-tensorrt.service  plowpilot.service
